--- a/poc/src/main/resources/org/epa/mda/poc/poc.CompanyRegistration-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/poc.CompanyRegistration-taskform.form
@@ -17,32 +17,49 @@
 <property name="outputBinding" value="company/address"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="2" name="company_programType1" type="InputText" id="1268668284">
+<field position="4" name="company_programType1" type="InputText" id="1268668284">
 <property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
 <property name="label" value="quot;enquot;,quot;programType1 (company)quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="company/programType1"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="3" name="company_busActivity1" type="InputText" id="464992442">
+<field position="5" name="company_busActivity1" type="InputText" id="464992442">
 <property name="fieldRequired" value="false"/>
 <property name="label" value="quot;enquot;,quot;busActivity1 (company)quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="company/busActivity1"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="4" name="company_programType2" type="InputText" id="1500705889">
+<field position="6" name="company_programType2" type="InputText" id="1500705889">
 <property name="fieldRequired" value="false"/>
 <property name="label" value="quot;enquot;,quot;programType2 (company)quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="company/programType2"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="5" name="company_busActivity2" type="InputText" id="1703861105">
+<field position="7" name="company_busActivity2" type="InputText" id="1703861105">
 <property name="fieldRequired" value="false"/>
 <property name="label" value="quot;enquot;,quot;busActivity2 (company)quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="company/busActivity2"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="company_city" type="InputText" id="1739128525">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;city (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="company/city"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="company_state" type="InputText" id="1137657119">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;state (company)quot;"/>
+<property name="readonly" value="false"/>
+<property name="outputBinding" value="company/state"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
 <dataHolder inputId="" name="#E9E371" type="dataModelerEntry" outId="company" value="org.epa.mda.poc.Company" id="company"/>
